# orx-selfref-col

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: core_col.rs  lib.rs  node.rs  selfref_col.rs  selfref_col_mut.rs  selfref_col_visit.rs  variant.rs
src/common_traits/: debug.rs  from.rs  from_iter.rs  into.rs  mod.rs
src/data/: eager_close.rs  lazy_close.rs  mod.rs  node_data.rs
src/memory/: mod.rs  never.rs  on_threshold.rs  policy.rs  reclaimer.rs  state.rs  utilization.rs
src/memory_reclaim/: lazy_bidirectional.rs  lazy_unidirectional.rs  memory_state.rs  mod.rs  utilization.rs
src/nodes/: can_leak.rs  has_collection_key.rs  index.rs  index_error.rs  lazy_data.rs  mod.rs  node.rs
src/references/: array.rs  array_left_most.rs  mod.rs  node_idx.rs  node_idx_error.rs  node_ptr.rs  node_refs.rs  none.rs  refs.rs  single.rs  vec.rs
src/references/iter/: array_left_most_ptr.rs  mod.rs
src/variants/: memory_reclaim.rs  mod.rs  variant.rs
tests/: doubly_linked_list.rs  nodeidx.rs  singly_linked_list.rs
