[package]
name = "orx-selfref-col"
version = "3.0.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "SelfRefCol is a core data structure to conveniently build safe and efficient self referential collections, such as linked lists and trees."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-selfref-col/"
keywords = ["self-referential", "list", "tree", "recursive", "pinned"]
categories = ["data-structures", "rust-patterns", "no-std"]

[dependencies]
orx-pseudo-default = { version = "2.0.0", default-features = false }
orx-pinned-vec = { path = "../orx-pinned-vec" }
orx-fixed-vec = { path = "../orx-fixed-vec" }
orx-split-vec = { path = "../orx-split-vec" }

[dev-dependencies]
orx-iterable = "1.2.0"
test-case = "3.3.1"
