[package]
name = "orx-selfref-col"
version = "2.12.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "SelfRefCol is a core data structure to conveniently build safe and efficient self referential collections, such as linked lists and trees."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-selfref-col/"
keywords = ["self-referential", "list", "tree", "recursive", "pinned"]
categories = ["data-structures", "rust-patterns", "no-std"]

[dependencies]
orx-pseudo-default = { version = "2.1.0", default-features = false }
orx-pinned-vec = { version = "3.18.0", default-features = false }
orx-fixed-vec = { version = "3.20.0", default-features = false }
orx-split-vec = { version = "3.20.0", default-features = false }

[dev-dependencies]
orx-iterable = { version = "1.3.0", default-features = false }
test-case = "3.3.1"
